# PhotoSage

./: .env.example  .gitignore  CHANGELOG.md  README.md  assessment.md  completed-upgrades.md  future-upgrades.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
docs/: lightroom-integration.md
examples/: sample_manifest.json
prompts/: image_classification.md
scripts/: check_docs.py
specs/: README.md
specs/001-lm-studio-provider/: plan.md  spec.md  tasks.md
src/photosage/: cli.py  config.py  logging_config.py  scanner.py
src/photosage/astro/: __init__.py  metadata.py
src/photosage/duplicates/: __init__.py  detector.py
src/photosage/geocoding/: __init__.py  cache.py
tests/: test_astro_metadata.py  test_catalog_safety.py  test_cli.py  test_duplicate_detector.py  test_duplicate_handler.py  test_exif_reader.py  test_filename_builder.py  test_filename_from_metadata.py  test_folder_organizer.py  test_folder_policies.py  test_folder_watcher.py  test_geocode_cache.py  test_gps_parser.py  test_gui_performance.py  test_gui_services.py  test_lightroom_exporter.py  test_lightroom_metadata_mapper.py  test_lmstudio_provider.py  test_local_only_mode.py  test_manifest.py  test_manifest_reader.py  test_manifest_validator.py  test_metadata_score.py  test_mixed_media.py  test_ollama_provider.py  test_provider_factory.py  test_provider_fallback.py  test_provider_healthcheck.py  test_renamer.py  test_response_normalizer.py  test_retry_handler.py  test_rollback_collisions.py  test_sanitizer.py  test_undo.py  test_xmp_reader.py
(+64 files in other folders)
