[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photosage"
version = "0.1.0"
description = "Metadata-first AI photo organization and safe renaming CLI."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.0",
  "Pillow>=10.0.0",
  "pillow-heif>=0.16.0",
  "exifread>=3.0.0",
  "rich>=13.0.0",
  "python-dateutil>=2.8.2"
]

[project.scripts]
photosage = "photosage.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
